banner, question button answer buton alignment, wallet tab-bar purple.

--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -130,12 +130,12 @@
       }
     }
     .header-login {
-      height: 40px;
+      height: 32px;
       //width: 104px;
       margin-right: 10px;
       border-radius: 26.5px;
       border: solid 1px @color-main-purple;
-      font-size: 18px;
+      font-size: 16px!important;
       outline: none;
       display: flex;
       align-items: center;
