--- a/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
+++ b/Cloudents.Web/ClientApp/components/question/newQuestion/newQuestion.less
@@ -291,8 +291,19 @@
       width: 611px;
       border-top-left-radius: 0;
       border-top-right-radius: 0;
+      margin: -9px 0 0px -16px;
+    }
+
+    @media (min-width: @screen-md) {
+      width: 611px;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
       margin: -9px 0 0px -24px;
     }
+    @media(min-width: @screen-sm){
+      margin: -9px 0 0px -24px;
+    }
+
   }
   .ask_btn.primary {
     background-color: @color-main-purple !important;
