--- a/Cloudents.Web/ClientApp/components/questionsSuggestPopUp/questionSuggestPopUp.less
+++ b/Cloudents.Web/ClientApp/components/questionsSuggestPopUp/questionSuggestPopUp.less
@@ -24,7 +24,8 @@ div.question-suggest {
         }
       }
       .user-name {
-        color: @Spitball-Main-color;
+        color: @color-black;
+        font-weight: bold;
       }
     }
   }
