--- a/Cloudents.Web/ClientApp/components/wallet/wallet.less
+++ b/Cloudents.Web/ClientApp/components/wallet/wallet.less
@@ -71,6 +71,7 @@
 
     .v-tabs__bar {
       height: 42px;
+      background-color: @color-main-purple;
       i.icon--right{
         display: none!important;
       }
