--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -12,6 +12,7 @@
 @color-main-purple: #3532d5;
 @color-red: #FF5252;
 @color-transparent: transparent;
+@color-black: #000000;
 /*
 @color-pink-gradient: fade(#f14d4d, 15%);
 @color-purple-gradient: fade(@color-purple, 15%);
@@ -28,7 +29,6 @@
 }*/
 
 //new stuff
-
 @Ask-a-Question: #0455a8;
 @Class-Material: #320161;
 @Flashcards: #f14d4d;
@@ -153,8 +153,8 @@
 
 .cellActionBtnMixin(){
   position: absolute;
-  .responsive-property(bottom, 14px, null, 6px);
-  .responsive-property(right, 16px, null, 8px);
+  .responsive-property(bottom, 8px, null, 6px);
+  .responsive-property(right, 8px, null, 8px);
   padding: 3px 20px;
   color: white;
   border-radius: 4px;
