user block css if not loged in fixed, banner instead of toaster start

--- a/Cloudents.Web/ClientApp/components/helpers/menu-list/menu-list.less
+++ b/Cloudents.Web/ClientApp/components/helpers/menu-list/menu-list.less
@@ -2,8 +2,8 @@
 .menu-list{
     //.theme--light .v-list .v-list__tile--link:hover
     .unsign .Mask {
-        width: 64px;
-        height: 64px;
+        width: 64px!important;
+        height: 64px!important;
         background-color: #9b9b9b;
     }
     .blue--text{
