pop up login stuff

--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -28,7 +28,6 @@
     background: -o-linear-gradient(top, @startColor, @endColor);
 }*/
 
-//new stuff
 @Ask-a-Question: #0455a8;
 @Class-Material: #320161;
 @Flashcards: #f14d4d;
@@ -86,7 +85,7 @@
   opacity: 0;
 }
 .giveMeEllipsisOne() {
-  white-space: nowrap; //TODO: IRENA - need to fix that
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
