--- a/Cloudents.Web/ClientApp/mixin.less
+++ b/Cloudents.Web/ClientApp/mixin.less
@@ -181,6 +181,7 @@
   position: sticky;
 }
 
+
 .flashcard-icon(@width, @frontColor, @backColor, @borderColor, @frontHover, @backHover, @frontText,@height: 0.88*@width) {
   //@height: 0.88*@width;
   position: relative;
@@ -279,3 +280,47 @@
 @screen-lg: 1904px;
 @logoWidth: 192px;
 @cellWidth: 500px;
+
+
+//transitions
+@fadeout-time: 2s;
+
+.fade-out {
+  animation: fadeOut @fadeout-time ease-in-out ;
+  animation-fill-mode: forwards;
+}
+
+.fade-in{
+  animation: fadeOut @fadeout-time ease-in-out ;
+  animation-fill-mode: forwards;
+  animation-direction: reverse;
+}
+
+.width-out{
+  animation-name: fadeOut;
+  animation-duration: @fadeout-time;
+  animation-timing-function:  ease-in-out ;
+  animation-delay: @fadeout-time + .2s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes displayOff {
+  0%{
+      display: block;
+  }
+  100%{
+      display: none;
+  }
+}
+
+@keyframes fadeOut {
+  0%{
+      opacity: 1;
+  }
+  50%{
+      opacity: .5;
+  }
+  100%{
+      opacity: 0;
+  }
+}
